--- a/founders.html
+++ b/founders.html
@@ -76,7 +76,7 @@
       </div>
       <div class="founder-info">
         <h2>Irish Sanorias</h2>
-        <p class="role">BSCS ???</p>
+        <p class="role">BSCS 1-5</p>
         <p class="bio">Responsible for the blog’s visuals, user experience, and interactive design. Makes learning about AI beautiful and intuitive.</p>
         <ul class="fun-facts">
           <li>Illustrator for AI concepts</li>
@@ -95,7 +95,7 @@
       </div>
       <div class="founder-info">
         <h2>Kien Valmonte</h2>
-        <p class="role">BSCS ???</p>
+        <p class="role">BSCS 1-5</p>
         <p class="bio">Analyzes AI research papers, verifies information, and ensures our content is accurate and backed by credible data.</p>
         <ul class="fun-facts">
           <li>Data visualization expert</li>
@@ -114,7 +114,7 @@
   </div>
   <div class="founder-info">
     <h2>Lyndon Singson</h2>
-    <p class="role">BSCS ???</p>
+    <p class="role">BSCS 1-5</p>
     <p class="bio">Helps organize the project, coordinates tasks, and ensures the content is clear and engaging for readers.</p>
     <ul class="fun-facts">
       <li>Layout organizer</li>
@@ -246,3 +246,4 @@ subscribeButton.addEventListener('click', (e) => {
 
 </body>
 </html>
+
