--- a/topic1.html
+++ b/topic1.html
@@ -64,7 +64,7 @@
   <div class="video-section fade-in">
     <h2>Watch the Vlog</h2>
     <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" title="Vlog 1" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/x8ovGJtHofo" title="Vlog 1" allowfullscreen></iframe>
     </div>
   </div>
 
@@ -182,3 +182,4 @@ subscribeButton.addEventListener('click', (e) => {
 
 </body>
 </html>
+
