--- a/topic3.html
+++ b/topic3.html
@@ -53,7 +53,7 @@
 
   <!-- VIDEO -->
   <div class="video-wrapper" style="margin-top:2rem;">
-    <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" title="Vlog 3" allowfullscreen></iframe>
+    <iframe src="https://youtu.be/MEOknZ_bHlA" title="Vlog 3" allowfullscreen></iframe>
   </div>
 
   <!-- Related Posts -->
@@ -170,3 +170,4 @@ subscribeButton.addEventListener('click', (e) => {
 
 </body>
 </html>
+
