--- a/founders.html
+++ b/founders.html
@@ -34,7 +34,7 @@
 
     <div class="founder-card fade-in">
       <div class="founder-img">
-        <img src="founder1.jpg" alt="Founder 1">
+        <img src="arexzus.jpg" alt="Founder 1">
       </div>
       <div class="founder-info">
         <h2>Arexzus B. Garganta</h2>
@@ -72,7 +72,7 @@
 
     <div class="founder-card fade-in">
       <div class="founder-img">
-        <img src="founder3.jpg" alt="Founder 3">
+        <img src="irish.jpg" alt="Founder 3">
       </div>
       <div class="founder-info">
         <h2>Irish Sanorias</h2>
@@ -91,7 +91,7 @@
 
     <div class="founder-card fade-in">
       <div class="founder-img">
-        <img src="founder4.jpg" alt="Founder 4">
+        <img src="kien.jpg" alt="Founder 4">
       </div>
       <div class="founder-info">
         <h2>Kien Valmonte</h2>
@@ -110,7 +110,7 @@
 
     <div class="founder-card fade-in">
   <div class="founder-img">
-    <img src="founder5.jpg" alt="Founder 5">
+    <img src="lyndon.jpg" alt="Founder 5">
   </div>
   <div class="founder-info">
     <h2>Lyndon Singson</h2>
@@ -246,5 +246,6 @@ subscribeButton.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
 
