--- a/topic2.html
+++ b/topic2.html
@@ -62,7 +62,7 @@
 
   <!-- VIDEO -->
   <div class="video-wrapper" style="margin-top:2rem;">
-    <iframe src="https://youtu.be/MEOknZ_bHlA" title="Vlog 2" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/MEOknZ_bHlA" title="Vlog 2" allowfullscreen></iframe>
   </div>
 
   <!-- Related -->
@@ -179,4 +179,5 @@ subscribeButton.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
