--- a/topic3.html
+++ b/topic3.html
@@ -53,7 +53,7 @@
 
   <!-- VIDEO -->
   <div class="video-wrapper" style="margin-top:2rem;">
-    <iframe src="https://youtu.be/MEOknZ_bHlA" title="Vlog 3" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/MEOknZ_bHlA" title="Vlog 2" allowfullscreen></iframe>
   </div>
 
   <!-- Related Posts -->
@@ -170,4 +170,5 @@ subscribeButton.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
