--- a/founders.html
+++ b/founders.html
@@ -53,7 +53,7 @@
 
     <div class="founder-card fade-in">
       <div class="founder-img">
-        <img src="founder2.jpg" alt="Founder 2">
+        <img src="curien.jpg" alt="Founder 2">
       </div>
       <div class="founder-info">
         <h2>Curien Del Rosario</h2>
@@ -246,6 +246,7 @@ subscribeButton.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
 
 
