--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <!-- Navbar -->
 <nav class="navbar">
   <div class="logo">AI in Everyday Life</div>
-  <ul class="nav-links">
+
+  <!-- Hamburger (mobile) -->
+  <div class="hamburger" id="hamburger">
+    ☰
+  </div>
+
+  <ul class="nav-links" id="navMenu">
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="blogs.html">Blogs</a></li>
     <li><a href="about.html">About</a></li>
@@ -19,8 +25,10 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="references.html">References</a></li>
   </ul>
+
   <div class="toggle-theme" id="themeToggle">🌙</div>
 </nav>
+
 
 <!-- Hero Section -->
 <section class="hero">
@@ -180,3 +188,4 @@ subscribeButton.addEventListener('click', (e) => {
 
 </body>
 </html>
+
