--- a/index.html
+++ b/index.html
@@ -184,8 +184,16 @@ subscribeButton.addEventListener('click', (e) => {
   }
 });
 
+
+ const hamburger = document.getElementById("hamburger");
+  const navMenu = document.getElementById("navMenu");
+
+  hamburger.addEventListener("click", () => {
+    navMenu.classList.toggle("show");
+  });  
 </script>
 
 </body>
 </html>
+
 
