--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 <!-- Navbar -->
 <nav class="navbar">
   <div class="logo">AI in Everyday Life</div>
-
-  <!-- Hamburger (mobile) -->
-  <div class="hamburger" id="hamburger">
-    ☰
-  </div>
-
-  <ul class="nav-links" id="navMenu">
+  <ul class="nav-links">
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="blogs.html">Blogs</a></li>
     <li><a href="about.html">About</a></li>
@@ -25,10 +19,8 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="references.html">References</a></li>
   </ul>
-
   <div class="toggle-theme" id="themeToggle">🌙</div>
 </nav>
-
 
 <!-- Hero Section -->
 <section class="hero">
@@ -184,16 +176,7 @@ subscribeButton.addEventListener('click', (e) => {
   }
 });
 
-
- const hamburger = document.getElementById("hamburger");
-  const navMenu = document.getElementById("navMenu");
-
-  hamburger.addEventListener("click", () => {
-    navMenu.classList.toggle("show");
-  });  
 </script>
 
 </body>
 </html>
-
-
